--- a/index.html
+++ b/index.html
@@ -35,6 +35,35 @@
                 </div>
             </div>
         </nav>
+
+        <section id="hero">
+            <div class="container">
+                <div class="row">
+                    <article class="col-lg-5">
+                        <img src="img/hero.jpg" alt="Hero">
+                    </article>
+                    <article class="col-lg-7 info">
+                        <h1>Aroma <br><span>para tus días</span></h1>
+                        <p>Maecenas nisi dolor, vehicula eget nulla at, pellentesque placerat risus.<br> Donec eu sapien egestas mauris consectetur volutpat.</p>
+                        <div class="row">
+                            <article class="col-md-4 dest">
+                                <h2>100%</h2>
+                                <p>Naturales de soja</p>
+                            </article>
+                            <article class="col-md-4 dest">
+                                <h2>4.9</h2>
+                                <p>Calificación de especialistas en la plataforma de clientes</p>
+                            </article>
+                            <article class="col-md-4 dest">
+                                <h2>60+</h2>
+                                <p>Empresas confían en nosotros</p>
+                            </article>
+                        </div>
+                    </article>
+                </div>
+            </div>
+
+        </section>
         </header>
 
     <main></main>
