--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>VE-LAS</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -43,7 +43,7 @@
                         <img src="img/hero.jpg" alt="Hero">
                     </article>
                     <article class="col-lg-7 info">
-                        <h1>Aroma <br><span>para tus días</span></h1>
+                        <h1>Aroma <br><span>Para Tus Días</span></h1>
                         <p>Maecenas nisi dolor, vehicula eget nulla at, pellentesque placerat risus.<br> Donec eu sapien egestas mauris consectetur volutpat.</p>
                         <div class="row">
                             <article class="col-md-4 dest">
@@ -64,7 +64,7 @@
             </div>
 
         </section>
-        </header>
+    </header>
 
     <main></main>
 
