--- a/index.html
+++ b/index.html
@@ -66,7 +66,44 @@
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <section id="nosotros">
+            <div class="container">
+                <h2>Sobre Nosotros</h2>
+                <p>Praesent quis posuere dolor. Integer at orci sapien.<br> Nunc vitae maximus augue. Fusce finibus, est sit amet sollicitudin ultricies.</p>
+                <div class="row">
+                    <article class="col-lg-4 col-md-12">
+                        <div class="card">
+                            <img src="img/home.svg" alt="">
+                            <h3>01</h3>
+                            <h4>Desde el año 2010</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a orci nunc. Sed faucibus pharetra ipsum, sit amet pretium nibh placerat eu.</p>
+                            <a href="#">Leer más</a>
+                        </div>
+                    </article>
+                    <article class="col-lg-4 col-md-12">
+                        <div class="card">
+                            <img src="img/ingredientes.svg" alt="">
+                            <h3>02</h3>
+                            <h4>Ingredientes</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a orci nunc. Sed faucibus pharetra ipsum, sit amet pretium nibh placerat eu.</p>
+                            <a href="#">Leer más</a>
+                        </div>
+                    </article>
+                    <article class="col-lg-4 col-md-12">
+                        <div class="card">
+                            <img src="img/contacto.svg" alt="">
+                            <h3>03</h3>
+                            <h4>Contacto</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a orci nunc. Sed faucibus pharetra ipsum, sit amet pretium nibh placerat eu.</p>
+                            <a href="#">Leer más</a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            
+        </section>
+    </main>
 
     <footer></footer>
 
