--- a/index.html
+++ b/index.html
@@ -103,6 +103,44 @@
             </div>
             
         </section>
+
+
+        <section id="productos">
+            <div class="container">
+                <h2>Nuestros Productos</h2>
+
+                <div class="row">
+                    <article class="col-lg-4 producto">
+                        <img src="img/vela1.jpg" />
+                        <div class="info-producto">
+                        <h3>Vela Blue</h3>
+                        <p>$ 800</p>
+                        </div>
+                    </article>
+                    <article class="col-lg-4 producto">
+                        <img src="img/vela2.jpg" />
+                        <div class="info-producto">
+                         <h3>Vela Pink</h3>
+                        <p>$ 900</p>
+                        </div>
+                    </article>
+                    <article class="col-lg-4 producto">
+                        <img src="img/vela3.jpg" />
+                        <div class="info-producto">
+                        <h3>Vela PinkWhite</h3>
+                        <p>$ 1200</p>
+                        </div>
+                    </article>
+                    <article class="col-lg-4 producto">
+                        <img src="img/vela4.jpg" />
+                        <div class="info-producto">
+                        <h3>Vela Fuchsia</h3>
+                        <p>$ 850</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
