Sección comentarios y footer

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                             <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
+                            <a class="nav-link" href="#nosotros">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Productos</a>
+                            <a class="nav-link" href="#productos">Productos</a>
                         </li>
                     </ul>
                 </div>
@@ -111,28 +111,28 @@
 
                 <div class="row">
                     <article class="col-lg-4 producto">
-                        <img src="img/vela1.jpg" />
+                        <img src="img/vela1.jpg" alt="vela"/>
                         <div class="info-producto">
                         <h3>Vela Blue</h3>
                         <p>$ 800</p>
                         </div>
                     </article>
                     <article class="col-lg-4 producto">
-                        <img src="img/vela2.jpg" />
+                        <img src="img/vela2.jpg" alt="vela"/>
                         <div class="info-producto">
                          <h3>Vela Pink</h3>
                         <p>$ 900</p>
                         </div>
                     </article>
                     <article class="col-lg-4 producto">
-                        <img src="img/vela3.jpg" />
+                        <img src="img/vela3.jpg" alt="vela"/>
                         <div class="info-producto">
                         <h3>Vela PinkWhite</h3>
                         <p>$ 1200</p>
                         </div>
                     </article>
                     <article class="col-lg-4 producto">
-                        <img src="img/vela4.jpg" />
+                        <img src="img/vela4.jpg" alt="vela"/>
                         <div class="info-producto">
                         <h3>Vela Fuchsia</h3>
                         <p>$ 850</p>
@@ -141,7 +141,48 @@
                 </div>
             </div>
         </section>
+
+
+        <section id="comentarios">
+            <div class="container">
+            
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <h3>Comentario 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut lacus neque. Pellentesque eu rhoncus dui, at mollis ligula. Maecenas eu tortor efficitur, commodo augue non, posuere dolor. Nulla ut augue egestas, dictum felis ut, bibendum enim.</p>
+                        <button>Compartir</button>
+                      </div>
+
+                      <div class="carousel-item">
+                        <h3>Comentario 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut lacus neque. Pellentesque eu rhoncus dui, at mollis ligula. Maecenas eu tortor efficitur, commodo augue non, posuere dolor. Nulla ut augue egestas, dictum felis ut, bibendum enim.</p>
+                        <button>Compartir</button>
+                      </div>
+
+                      <div class="carousel-item">
+                        <h3>Comentario 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut lacus neque. Pellentesque eu rhoncus dui, at mollis ligula. Maecenas eu tortor efficitur, commodo augue non, posuere dolor. Nulla ut augue egestas, dictum felis ut, bibendum enim.</p>
+                        <button>Compartir</button>
+                      </div>
+                    </div>
+                  </div>
+
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div class="container">
+            <a class="navbar-brand footer" href="#"><span>VE-</span>LAS</a>
+            <p>	&#169; - Todos los derechos reservados.</p>
+            <img src="img/facebook.svg" alt="facebook">
+            <img src="img/instagram.svg" alt="instagram">
+            <img src="img/phone.svg" alt="phone">
+            <img src="img/map.svg" alt="map">
+        </div>
+       
+    </footer>
 
     <footer></footer>
 
