--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     </div>
                     <div class="swiper-button-next btn"></div>
                     <div class="swiper-button-prev btn"></div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
