--- a/index.html
+++ b/index.html
@@ -225,6 +225,27 @@
             </div>
         </section>
 
+
+        <section id="suscribite">
+            <div class="container">
+                <h2>Suscríbete para recibir todas las novedades</h2>
+                <form>
+                    <div className="form-floating mb-3">
+                        <input
+                          name="email"
+                          type="email"
+                          className="form-control"
+                          id="email"
+                          placeholder="Email"
+                          required
+                        />
+                        <button type="submit" className="btn btn-primary">
+                            Suscribirse
+                        </button>
+                    </div>
+                </form>
+        </section>
+
     </main>
 
     <footer>
